unreleased
----------

* shows departing trains with a small memoize feature. The shelve is
  situated in XDG_DATA_HOME