@@ -1,2 +1,2 @@
 # TODO: currently hardcoded stop: roma st
-APIURL = 'http://jp.translink.com.au/travel-information/network-information/stops-and-stations/stop/600029?RouteCode=&Direction=Upward'
+APIURL = 'http://jp.translink.com.au/travel-information/network-information/stops-and-stations/stop/{stopid}?RouteCode=&Direction=Upward'
